--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
-<head></head>
-
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
 
+<head>
+ <link rel="stilesheet" href="stile.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>salvador/jaojao</title>
 </head>
+
 <body>
     <header>melhores jogadas do cristiano ronaldo</header>
+    <section>
+       <div class="texto-video1">
     <h1>jogadas do crsitiano ronaldo </h1>
     <p>este video ira ter jogadas incriveis do cristiano ronaldo </p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/eE1NEt7jyA4?si=SxZ0NgilO9B43579" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    
+    <div> 
+
+        <div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/eE1NEt7jyA4?si=SxZ0NgilO9B43579"
+     title="YouTube video player" frameborder="0" 
+     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div>
+        <section>
     
 </body>
 </html>
