--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
- <link rel="stilesheet" href="stile.css">
+ <link rel="stylesheet" href="stile.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>salvador/jaojao</title>
